# mindspore-tools-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SECURITY.md  mcp示例prompt.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
current_run/: model_info.txt  simplecnn_best.ckpt
docs/: architecture.md
examples/: 01_model_discovery.py  02_model_recommendation.py  03_model_comparison.py  04_pytorch_to_mindspore.py  05_api_mapping_checker.py  06_adversarial_attack.py  07_robustness_evaluation.py  08_data_augmentation.py  09_lr_scheduler.py  10_training_callbacks.py  11_model_quantization.py  12_model_conversion.py  13_distributed_training.py  14_model_complexity.py  15_code_linter.py  16_training_template.py  17_api_examples.py  README.md
examples/resnet50_example/: README.md  evaluate_robustness.py  test_evaluate.py  train.py
rank_0/om/: analyze_fail.ir
src/mindspore_tools_mcp/: api_tools.py  linter_tools.py  msutils_tools.py  prompt.py  server.py  template_tools.py  tools.py
src/mindspore_tools_mcp/api_examples/: __init__.py  registry.py  searcher.py
src/mindspore_tools_mcp/linter/: __init__.py  checker.py  formatter.py  rules.py
src/mindspore_tools_mcp/msutils/: __init__.py
src/mindspore_tools_mcp/msutils/analysis/: __init__.py  complexity.py  visualization.py
src/mindspore_tools_mcp/msutils/data/: __init__.py  augmentations.py  loaders.py  transforms.py
src/mindspore_tools_mcp/templates/: __init__.py  generator.py
tests/: check_data.py  check_detection.py  test_core.py  test_recommend.py
(+17 files in other folders)
