[project]
name = "mindspore-tools-mcp"
version = "1.0.0"
description = "MindSpore Tools MCP - 基于 MCP 协议的 MindSpore 开发工具集（模型检索、API 映射、代码评分、训练模板）"
readme = "README_CN.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "mcp[cli]>=1.21.2",
    "requests>=2.32.5",
]
authors = [
    { name = "whitea133", email = "1309848726@qq.com" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mindspore_tools_mcp"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"